# fake-news-immune-system

./: .gitignore  README.md  pyproject.toml
notebooks/: ais_ml_hybrid.ipynb  eda_dataset.ipynb  eda_tfidf.ipynb  eda_wordembeddings.ipynb
src/: negative_selection.py
