[tool.poetry]
name = "fake-news-immune-system"
version = "0.1.0"
description = ""
authors = ["ayeshavm <ayesha.mendoza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
nltk = "^3.9.1"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
